objects/Broker_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Broker Junction</relationshipLabel>
        <relationshipName>Broker_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission Plan</label>
        <referenceTo>loan__Commission_Plan__c</referenceTo>
        <relationshipLabel>Broker Junction</relationshipLabel>
        <relationshipName>Broker_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Broker Junction</relationshipLabel>
        <relationshipName>Broker_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Broker Junction</label>
    <listViews>
        <fullName>All_Broker_Junctions</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Commission_Plan__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Broker Junctions</label>
        <sharedTo>
            <group>SalesforceCOE</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BRJ-{0000000000}</displayFormat>
        <label>Broker Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>